Add Infrastructure metrics computation

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prepare raw data for manual matching\n"
+    "### DEV\n"
    ]
   },
   {
@@ -85,318 +85,180 @@
     "\n",
     "django.setup()\n",
     "\n",
-    "from tsosi.data.pid_matching import prepare_manual_matching\n",
-    "\n",
-    "\n",
-    "file_folder = Path.home() / \"Nextcloud/TSOSI_data/doab/1_raw/\"\n",
-    "file_name = \"2023-11-27-DOAB_Library_Report_2023.xlsx\"\n",
-    "sheet = \"Sheet1\"\n",
-    "name_column = \"Institution\"\n",
-    "country_colum = \"Country\"\n",
+    "from tsosi.data.db_utils import (\n",
+    "    date_extremas_from_queryset,\n",
+    "    DateExtremas,\n",
+    "    bulk_create_from_df,\n",
+    "    bulk_update_from_df,\n",
+    ")\n",
+    "from tsosi.models import Transfert, Entity, InfrastructureDetails\n",
+    "from django.db.models import Q, Count, Max\n",
     "\n",
     "\n",
     "@sync_to_async\n",
-    "def to_run():\n",
-    "    xls = pd.ExcelFile(str(file_folder / file_name))\n",
-    "    data = pd.read_excel(xls, sheet)\n",
-    "    return prepare_manual_matching(\n",
-    "        data, name_column, country_column=country_colum\n",
+    "def run():\n",
+    "    # Min & max transfert dates per recipient\n",
+    "    dates = date_extremas_from_queryset(\n",
+    "        Transfert.objects.all(), [\"date_clc\"], groupby=[\"recipient_id\"]\n",
+    "    )\n",
+    "    dates: dict[str, DateExtremas] = {\n",
+    "        d[\"recipient_id\"]: d[\"_extremas\"] for d in dates\n",
+    "    }\n",
+    "\n",
+    "    # Ratio of hidden amounts among all amounts per recipient\n",
+    "    hidden_transferts = Count(\n",
+    "        \"transfert_as_recipient\",\n",
+    "        filter=Q(transfert_as_recipient__hide_amount=True),\n",
+    "    )\n",
+    "    total_transferts = Count(\"transfert_as_recipient\")\n",
+    "    date_source_max = Max(\n",
+    "        \"transfert_as_recipient__data_load_source__date_data_obtained\"\n",
     "    )\n",
     "\n",
+    "    entities = (\n",
+    "        Entity.objects.filter(is_recipient=True)\n",
+    "        .annotate(hidden_transferts=hidden_transferts)\n",
+    "        .annotate(total_transferts=total_transferts)\n",
+    "        .annotate(date_last_update=date_source_max)\n",
+    "        .values(\n",
+    "            \"id\",\n",
+    "            \"hidden_transferts\",\n",
+    "            \"total_transferts\",\n",
+    "            \"date_last_update\",\n",
+    "            \"infrastructure_details\",\n",
+    "        )\n",
+    "    )\n",
+    "    data = pd.DataFrame.from_records(entities)\n",
+    "    if data.empty:\n",
+    "        return data, dates\n",
     "\n",
-    "res = await to_run()"
+    "    data[\"hidden_ratio\"] = data[\"hidden_transferts\"] / data[\"total_transferts\"]\n",
+    "\n",
+    "    data[\"dates\"] = data[\"id\"].map(dates)\n",
+    "    data[\"date_data_start\"] = data[\"dates\"].apply(\n",
+    "        lambda x: x.min if not pd.isna(x) else x\n",
+    "    )\n",
+    "    data[\"date_data_end\"] = data[\"dates\"].apply(\n",
+    "        lambda x: x.max if not pd.isna(x) else x\n",
+    "    )\n",
+    "\n",
+    "    data[\"date_data_update\"] = data[\"date_last_update\"]\n",
+    "\n",
+    "    no_details_mask = data[\"infrastructure_details\"].isna()\n",
+    "    details_to_create = data[no_details_mask].copy()\n",
+    "    if not details_to_create.empty:\n",
+    "        details_to_create[\"entity_id\"] = details_to_create[\"id\"]\n",
+    "        bulk_create_from_df(\n",
+    "            InfrastructureDetails,\n",
+    "            details_to_create,\n",
+    "            [\n",
+    "                \"entity_id\",\n",
+    "                \"hidden_ratio\",\n",
+    "                \"data_data_start\",\n",
+    "                \"date_data_end\",\n",
+    "                \"date_data_update\",\n",
+    "            ],\n",
+    "        )\n",
+    "\n",
+    "    details_to_update = data[~no_details_mask].copy()\n",
+    "    if not details_to_update.empty:\n",
+    "        details_to_update[\"id\"] = details_to_update[\"infrastructure_details\"]\n",
+    "        bulk_update_from_df(\n",
+    "            InfrastructureDetails,\n",
+    "            details_to_update,\n",
+    "            [\n",
+    "                \"id\",\n",
+    "                \"hidden_ratio\",\n",
+    "                \"date_data_start\",\n",
+    "                \"date_data_end\",\n",
+    "                \"date_data_update\",\n",
+    "            ],\n",
+    "        )\n",
+    "\n",
+    "    return data, dates\n",
+    "\n",
+    "\n",
+    "res = await run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>infrastructure_details</th>\n",
+       "      <th>hidden_transferts</th>\n",
+       "      <th>total_transferts</th>\n",
+       "      <th>date_last_update</th>\n",
+       "      <th>hidden_ratio</th>\n",
+       "      <th>dates</th>\n",
+       "      <th>date_data_start</th>\n",
+       "      <th>date_data_end</th>\n",
+       "      <th>date_data_update</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>b84cbff0-f2d0-46db-bc45-73caf5a1e33c</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2025-02-11</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>DateExtremas(min=datetime.date(2021, 5, 11), m...</td>\n",
+       "      <td>2021-05-11</td>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>2025-02-11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     id  infrastructure_details  \\\n",
+       "0  b84cbff0-f2d0-46db-bc45-73caf5a1e33c                       2   \n",
+       "\n",
+       "   hidden_transferts  total_transferts date_last_update  hidden_ratio  \\\n",
+       "0                 23                23       2025-02-11           1.0   \n",
+       "\n",
+       "                                               dates date_data_start  \\\n",
+       "0  DateExtremas(min=datetime.date(2021, 5, 11), m...      2021-05-11   \n",
+       "\n",
+       "  date_data_end date_data_update  \n",
+       "0    2025-01-01       2025-02-11  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Optional date cleaning to output dates instead of datetimes\n",
-    "date_cols = [\n",
-    "    \"Support Confirmation Date\",\n",
-    "    \"Support Start Date\",\n",
-    "    \"Support End Date\",\n",
-    "]\n",
-    "for d_col in date_cols:\n",
-    "    res[d_col] = res[d_col].dt.date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_folder = Path.home() / \"Nextcloud/TSOSI_data/doab/2_matched/\"\n",
-    "file_to_write = \"2023-11-27-DOAB_Library_Report_2023_matched.xlsx\"\n",
-    "file_path = str(file_folder / file_to_write)\n",
-    "res.to_excel(file_path, index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Process enriched data\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pathlib import Path\n",
-    "import sys\n",
-    "import os\n",
-    "import django\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Add the parent directory to the system path and setup django\n",
-    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent)\n",
-    "\n",
-    "if BASE_DIR not in sys.path:\n",
-    "    sys.path.append(BASE_DIR)\n",
-    "\n",
-    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
-    "\n",
-    "django.setup()\n",
-    "\n",
-    "from tsosi.data.utils import clean_null_values\n",
-    "from tsosi.data.preparation.cleaning_utils import clean_cell_value\n",
-    "from tsosi.data.pid_matching import process_enriched_data\n",
-    "from tsosi.models.transfert import (\n",
-    "    TRANSFERT_ENTITY_TYPE_EMITTER,\n",
-    "    TRANSFERT_ENTITY_TYPE_AGENT,\n",
-    ")\n",
-    "\n",
-    "process_agents = True\n",
-    "folder = Path.home() / \"Nextcloud/TSOSI_data/doaj\"\n",
-    "file_base_name = \"2024-09-20-DOAJ_Library_Report_2023\"\n",
-    "enriched_file_path = (\n",
-    "    folder / \"3_enriched\" / f\"{file_base_name}_enriched_done.xlsx\"\n",
-    ")\n",
-    "sheet_transferts = \"Transferts\"\n",
-    "name_column = \"Institution name\"\n",
-    "xls = pd.ExcelFile(str(enriched_file_path))\n",
-    "\n",
-    "data = pd.read_excel(xls, sheet_transferts)\n",
-    "\n",
-    "res = process_enriched_data(data, name_column, TRANSFERT_ENTITY_TYPE_EMITTER)\n",
-    "\n",
-    "if process_agents:\n",
-    "    # Match agents data back to the transferts spreadsheet\n",
-    "    print(\"Processing agents/consortiums data\")\n",
-    "    sheet_agent = \"Consortiums\"\n",
-    "    agent_col = \"agent/consortium\"\n",
-    "    country_col = \"country\"\n",
-    "    agents = pd.read_excel(xls, sheet_agent)\n",
-    "    for col in [agent_col, country_col]:\n",
-    "        res[col] = res[col].apply(clean_cell_value)\n",
-    "        agents[col] = agents[col].apply(clean_cell_value)\n",
-    "    clean_null_values(agents)\n",
-    "    clean_null_values(res)\n",
-    "    res = res.merge(agents, on=[agent_col, country_col], how=\"left\")\n",
-    "    # Remove agents not in the agent spreadsheet (DOAJ mixed up consortium name and institution type)\n",
-    "    wrong_agents = res[~res[agent_col].isin(agents[agent_col])]\n",
-    "    res.loc[wrong_agents.index, agent_col] = None\n",
-    "\n",
-    "    # Process agents data enrichment\n",
-    "    res = process_enriched_data(res, agent_col, TRANSFERT_ENTITY_TYPE_AGENT)\n",
-    "clean_null_values(res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res[res[\"Agent\"] == \"Baden-Wurttemberg\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prepared_file_path = folder / \"4_prepared\" / f\"{file_base_name}_prepared.xlsx\"\n",
-    "\n",
-    "res.to_excel(str(prepared_file_path), sheet_name=\"Transferts\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pycountry\n",
-    "\n",
-    "{c.name: c for c in pycountry.countries}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Redis setup\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pycountry import countries\n",
-    "\n",
-    "\n",
-    "res = countries.search_fuzzy(\"Guadeloupe\")\n",
-    "res"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Extract agents/consortiums\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import re\n",
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "\n",
-    "folder = Path.home() / \"Nextcloud/TSOSI_data/doab/1_raw\"\n",
-    "file_name = \"2023-11-27-DOAB_Library_Report_2023.xlsx\"\n",
-    "sheet_name = \"Sheet1\"\n",
-    "\n",
-    "xls = pd.ExcelFile(str(folder / file_name))\n",
-    "df = pd.read_excel(xls, sheet_name)\n",
-    "\n",
-    "\n",
-    "def is_true(val) -> bool:\n",
-    "    if isinstance(val, str):\n",
-    "        return val.strip().lower() == \"true\"\n",
-    "    elif isinstance(val, bool):\n",
-    "        return val\n",
-    "    elif isinstance(val, (int, float)):\n",
-    "        return val == 1\n",
-    "    return False\n",
-    "\n",
-    "\n",
-    "def clean_cell_value[T](s: T) -> T:\n",
-    "    \"\"\"\n",
-    "    Clean the value from a spreadsheet cell:\n",
-    "    - Normalize spacing values.\n",
-    "    - Strip whitespaces.\n",
-    "    \"\"\"\n",
-    "    if not s or not isinstance(s, str):\n",
-    "        return s\n",
-    "    return re.sub(r\"\\s+\", \" \", s).strip()\n",
-    "\n",
-    "\n",
-    "agent_column = \"Agent/Contact\"\n",
-    "country_column = \"Country\"\n",
-    "# not_agents = [\"standalone library\", \"Funder\", \"Consortium\", \"publisher\"]\n",
-    "not_agents = []\n",
-    "df = df[~df[agent_column].isna()]\n",
-    "df = df[~df[agent_column].isin(not_agents)]\n",
-    "for c in df.columns:\n",
-    "    df[c] = df[c].apply(clean_cell_value)\n",
-    "df = df[[agent_column, country_column]].drop_duplicates()\n",
-    "df.replace(to_replace=[np.nan, pd.NA, pd.NaT], value=None, inplace=True)\n",
-    "df.sort_values(by=agent_column)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Add coordinates to country file\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "additional_coordinates = {\n",
-    "    \"hk\": [\n",
-    "        114.177216,\n",
-    "        22.302711,\n",
-    "    ],  # Hong kong\n",
-    "    \"xk\": [\n",
-    "        21.166191,\n",
-    "        42.667542,\n",
-    "    ],  # Kosovo\n",
-    "    \"mo\": [\n",
-    "        113.552971,\n",
-    "        22.210928,\n",
-    "    ],  # Macau\n",
-    "    \"tw\": [\n",
-    "        121.597366,\n",
-    "        25.105497,\n",
-    "    ],  # Taiwan\n",
-    "    \"eh\": [\n",
-    "        -13.162500,\n",
-    "        27.125286,\n",
-    "    ],  # Western Sahara\n",
-    "}\n",
-    "BASE_DIR = Path(os.getcwd()).resolve().parent.parent.parent\n",
-    "\n",
-    "FRONTEND_DATA_DIR = BASE_DIR / \"frontend/src/assets/data\"\n",
-    "FRONTEND_STATIC_DIR = BASE_DIR / \"frontend/public/static_data\"\n",
-    "\n",
-    "country_file = FRONTEND_DATA_DIR / \"country.json\"\n",
-    "\n",
-    "centroids_file = FRONTEND_DATA_DIR / \"country_centroids.geojson\"\n",
-    "\n",
-    "countries = pd.read_json(country_file)\n",
-    "centroids = pd.read_json(centroids_file)\n",
-    "\n",
-    "centroids = pd.json_normalize(centroids[\"features\"])\n",
-    "# Filter problematic entities - The ones with a toplevel ISO corresponding\n",
-    "# to a child entity.\n",
-    "mask = (\n",
-    "    centroids[\"properties.COUNTRY\"] != centroids[\"properties.COUNTRYAFF\"]\n",
-    ") & (centroids[\"properties.ISO\"] == centroids[\"properties.AFF_ISO\"])\n",
-    "centroids = centroids[~mask].copy()\n",
-    "\n",
-    "cols = {\"properties.ISO\": \"code\", \"geometry.coordinates\": \"coordinates\"}\n",
-    "centroids = centroids[cols.keys()].rename(columns=cols)\n",
-    "\n",
-    "centroids[\"code\"] = centroids[\"code\"].str.lower()\n",
-    "\n",
-    "manual_centroids = pd.DataFrame(\n",
-    "    [{\"code\": k, \"coordinates\": v} for k, v in additional_coordinates.items()]\n",
-    ")\n",
-    "centroids = pd.concat(\n",
-    "    [\n",
-    "        centroids,\n",
-    "        manual_centroids[~manual_centroids[\"code\"].isin(centroids[\"code\"])],\n",
-    "    ],\n",
-    "    axis=0,\n",
-    ")\n",
-    "countries = countries.merge(centroids, on=\"code\", how=\"left\")\n",
-    "\n",
-    "output_file = FRONTEND_STATIC_DIR / \"country.json\"\n",
-    "countries.to_json(output_file, orient=\"records\", index=False, indent=2)"
+    "data, dates = res\n",
+    "data"
    ]
   }
  ],
