--- a/backend/tsosi/data/preparation/doab/data_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/data_2024.ipynb
@@ -541,6 +541,7 @@
     "import sys\n",
     "import os\n",
     "import django\n",
+    "from datetime import date\n",
     "\n",
     "# Add the parent directory to the system path and setup django\n",
     "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
@@ -555,14 +556,15 @@
     "from tsosi.data.preparation.doab.libraries import get_config as config_libraries\n",
     "from tsosi.data.preparation.doab.sponsors import get_config as config_sponsors\n",
     "\n",
+    "date_data = date(2025, 2, 11)\n",
     "# Libraries\n",
     "file_path = (\n",
     "    Path.home()\n",
     "    / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Library_Report_prepared.xlsx\"\n",
     ")\n",
     "sheet_name = \"Transferts\"\n",
-    "config = config_libraries(str(file_path), sheet_name)\n",
-    "# config.generate_data_file()\n",
+    "config = config_libraries(str(file_path), sheet_name, date_data)\n",
+    "config.generate_data_file()\n",
     "\n",
     "# Sponsors\n",
     "file_path = (\n",
@@ -570,7 +572,7 @@
     "    / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Sponsorship_Report_prepared.xlsx\"\n",
     ")\n",
     "sheet_name = \"Transferts\"\n",
-    "config = config_sponsors(str(file_path), sheet_name)\n",
+    "config = config_sponsors(str(file_path), sheet_name, date_data)\n",
     "config.generate_data_file()"
    ]
   },
