Clean DOAB data (parse amounts before processing..) - Move SciPost related files to the appropriate folder

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -64,9 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/guillaume-alzieu/Dev/TSOSI/tsosi-app/backend/.venv/lib/python3.12/site-packages/django/db/models/fields/__init__.py:1606: RuntimeWarning: DateTimeField InfrastructureDetails.date_data_update received a naive datetime (2025-02-11 00:00:00) while time zone support is active.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
