--- a/backend/tsosi/data/preparation/doab/data_2024.ipynb
+++ b/backend/tsosi/data/preparation/doab/data_2024.ipynb
@@ -24,12 +24,26 @@
     "from functools import reduce\n",
     "import re\n",
     "from datetime import date\n",
+    "import os\n",
+    "import sys\n",
+    "import django\n",
+    "\n",
+    "# Add the parent directory to the system path and setup django\n",
+    "BASE_DIR = str(Path(os.getcwd()).resolve().parent.parent.parent.parent)\n",
+    "\n",
+    "if BASE_DIR not in sys.path:\n",
+    "    sys.path.append(BASE_DIR)\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"backend_site.settings\")\n",
+    "\n",
+    "django.setup()\n",
+    "\n",
+    "from tsosi.data.preparation.cleaning_utils import clean_number_value\n",
     "\n",
     "FILE_INPUT_FOLDER = Path.home() / \"Nextcloud/TSOSI_data/doab/0_raw/\"\n",
     "FILE_OUTPUT_FOLDER = Path.home() / \"Nextcloud/TSOSI_data/doab/1_pre_processed/\"\n",
-    "# INPUT_NAME = \"2025-02-11-DOAB_Library_Report.xlsx\"\n",
-    "# OUTPUT_NAME = \"2025-02-11-DOAB_Library_Report_pre_processed.xlsx\"\n",
-    "INPUT_NAME = \"2025-02-11-DOAB_Sponsorship_Report.xlsx\"\n",
+    "INPUT_NAME = \"2025-02-11-DOAB_Library_Report.xlsx\"\n",
+    "# INPUT_NAME = \"2025-02-11-DOAB_Sponsorship_Report.xlsx\"\n",
     "OUTPUT_NAME = f\"{INPUT_NAME.split(\".\")[0]}_pre_processed.xlsx\"\n",
     "\n",
     "AMOUNT_COLS_REGEX = [r\"Annual amount \\(([A-Z]{3})\\)\", r\"Amount \\(([A-Z]{3})\\)\"]\n",
@@ -55,7 +69,10 @@
     "\n",
     "\n",
     "def select_transferts(df: pd.DataFrame):\n",
-    "\n",
+    "    \"\"\"\n",
+    "    Filter out rows that do not correspond to a transfert +\n",
+    "    clean the amount fields\n",
+    "    \"\"\"\n",
     "    compulsory_columns = [\n",
     "        \"Company\",\n",
     "        \"Country\",\n",
@@ -88,7 +105,17 @@
     "    mask = amount_mask & date_mask\n",
     "    df_filtered = df[mask][useful_columns].copy()\n",
     "\n",
-    "    print(f\"Discarded {len(df) - len(df_filtered)} rows out of {len(df)} rows.\")\n",
+    "    print(\n",
+    "        f\"Discarded {len(df) - len(df_filtered)} rows without amount \"\n",
+    "        f\"out of {len(df)} rows.\"\n",
+    "    )\n",
+    "\n",
+    "    # Clean amount values (some are numbers, other are strings, ...)\n",
+    "    def clean_number_error(x):\n",
+    "        return clean_number_value(x, False, True)\n",
+    "\n",
+    "    for col in amount_columns.values():\n",
+    "        df_filtered[col] = df_filtered[col].apply(clean_number_error)\n",
     "    return df_filtered\n",
     "\n",
     "\n",
@@ -305,7 +332,7 @@
     "    )\n",
     "    futures = df[mask]\n",
     "    if not futures.empty:\n",
-    "        print(f\"Discarding {len(futures)} transferts.\")\n",
+    "        print(f\"Discarding {len(futures)} future transferts.\")\n",
     "    return df[~mask].copy()\n",
     "\n",
     "\n",
@@ -348,7 +375,20 @@
     "    return df_final\n",
     "\n",
     "\n",
-    "res = pre_process(export=True)"
+    "res = pre_process(export=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# res.to_excel(\n",
+    "#     \"/home/guillaume-alzieu/Nextcloud/TSOSI_data/doab/temp_correction.xlsx\",\n",
+    "#     index=False,\n",
+    "# )\n",
+    "res.sort_values(\"amount\", ascending=False)"
    ]
   },
   {
@@ -567,13 +607,13 @@
     "config.generate_data_file()\n",
     "\n",
     "# Sponsors\n",
-    "file_path = (\n",
-    "    Path.home()\n",
-    "    / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Sponsorship_Report_prepared.xlsx\"\n",
-    ")\n",
-    "sheet_name = \"Transferts\"\n",
-    "config = config_sponsors(str(file_path), sheet_name, date_data)\n",
-    "config.generate_data_file()"
+    "# file_path = (\n",
+    "#     Path.home()\n",
+    "#     / \"Nextcloud/TSOSI_data/doab/4_prepared/2025-02-11-DOAB_Sponsorship_Report_prepared.xlsx\"\n",
+    "# )\n",
+    "# sheet_name = \"Transferts\"\n",
+    "# config = config_sponsors(str(file_path), sheet_name, date_data)\n",
+    "# config.generate_data_file()"
    ]
   },
   {
@@ -627,12 +667,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use already enriched data\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "organized[organized[\"_processed\"] != True][\"Company\"].unique().__len__()"
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
+    "to_enrich_file = Path.home() / \"Nextcloud/TSOSI_data/doab/temp_correction.xlsx\"\n",
+    "enriched_file = (\n",
+    "    Path.home()\n",
+    "    / \"Nextcloud/TSOSI_data/doab/3_enriched/2025-02-11-DOAB_Library_Report_enriched_backup.xlsx\"\n",
+    ")\n",
+    "\n",
+    "to_enrich = pd.read_excel(str(to_enrich_file))\n",
+    "enriched = pd.read_excel(str(enriched_file), sheet_name=\"Transferts\")\n",
+    "consortiums = pd.read_excel(str(enriched_file), sheet_name=\"Consortiums\")\n",
+    "\n",
+    "enrichment_columns = [c for c in enriched.columns if c.startswith(\"_\")]\n",
+    "data = (\n",
+    "    enriched.groupby([\"Company\", \"Country\"], dropna=False)[enrichment_columns]\n",
+    "    .first()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "organized = to_enrich.merge(data, how=\"left\", on=[\"Company\", \"Country\"])\n",
+    "sorted_cols = []\n",
+    "for c in organized.columns:\n",
+    "    if c in enrichment_columns:\n",
+    "        continue\n",
+    "    sorted_cols.append(c)\n",
+    "    if c == \"Company\":\n",
+    "        sorted_cols += enrichment_columns\n",
+    "\n",
+    "organized = organized[sorted_cols].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = (\n",
+    "    Path.home()\n",
+    "    / \"Nextcloud/TSOSI_data/doab/3_enriched/2025-02-11-DOAB_Library_Report_enriched.xlsx\"\n",
+    ")\n",
+    "writer = pd.ExcelWriter(str(output_file), engine=\"xlsxwriter\")\n",
+    "organized.to_excel(writer, sheet_name=\"Transferts\", index=False)\n",
+    "consortiums.to_excel(writer, sheet_name=\"Consortiums\", index=False)\n",
+    "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "consortiums"
    ]
   },
   {
