Add basic static pages + Font recommended by the designer

--- a/backend/tsosi/data/playground.ipynb
+++ b/backend/tsosi/data/playground.ipynb
@@ -269,6 +269,75 @@
     "data, dates = res\n",
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Bold Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Bold_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Hairline Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Hairline_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Regular Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Regular_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Black.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Black.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Regular.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Regular.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Thin.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Thin.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont SemiBold.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_SemiBold.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Light Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Light_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Black Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Black_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Heavy Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Heavy_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Thin Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Thin_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Bold.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Bold.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont SemiBold Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_SemiBold_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Hairline.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Hairline.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Heavy.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Heavy.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont ExtraLight.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_ExtraLight.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Book Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Book_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont ExtraLight Italic.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_ExtraLight_Italic.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Book.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Book.woff2\n",
+      "file: /home/guillaume-alzieu/Documents/TSOSI/Graphisme/Mont/Mont/Fontfabric - Mont Light.otf\n",
+      "Save path: /home/guillaume-alzieu/Documents/TSOSI/Fonts/Mont/Mont_Light.woff2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from fontTools.ttLib.woff2 import compress\n",
+    "from pathlib import Path\n",
+    "import re\n",
+    "\n",
+    "font_directory = Path.home() / \"Documents/TSOSI/Graphisme/Mont/Mont\"\n",
+    "otf_files = font_directory.glob(\"*.otf\")\n",
+    "save_directory = Path.home() / \"Documents/TSOSI/Fonts/Mont\"\n",
+    "\n",
+    "for file in otf_files:\n",
+    "    file_path_usefull = re.match(r\".*(Mont[^\\.]+)\", file.name)\n",
+    "    save_path = (\n",
+    "        str(save_directory / file_path_usefull[1]).replace(\" \", \"_\") + \".woff2\"\n",
+    "    )\n",
+    "    compress(str(file), str(save_path))"
+   ]
   }
  ],
  "metadata": {
